# solana-trading-bot

./: .env.example  .gitignore  Cargo.toml  README.md  bot.md  plan.md
src/: main.rs
src/config/: environment.rs  mod.rs
src/market_data/: fetch.rs  mod.rs  models.rs
src/telegram/: bot.rs  commands.rs
src/trading/: analyzer.rs  core.rs  mod.rs  wallet_tracker.rs
src/utils/: error.rs
