[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0.64"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
solana-sdk = "2.0.13"
solana-client = "2.0.13"
solana-client-helpers = "1.1.0"
futures = "0.3.31"