[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
teloxide = { version = "0.13.0", features = ["macros"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"
chrono = "0.4"
ws = "0.9"
serde_json = "1.0"